# encode-solana-hackathon

./: .dockerignore  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: master-push.yml
backend/: package-lock.json  package.json
backend/src/: app.module.ts  health.controller.ts  main.ts
backend/src/payment-token/: payment-token.controller.ts  payment-token.module.ts  payment-token.service.ts
backend/src/solana-client/: contants.ts  sdk-factory.ts  solana-client.module.ts  solana-provider.factory.ts
backend/src/structured-product/: oracle.service.ts  structured-product.controller.ts  structured-product.module.ts  structured-product.service.ts
docker/: frontend.Dockerfile
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docker/rpc-proxy/: Dockerfile
frontend/: next.config.mjs  package.json  tsconfig.json
frontend/src/: constants.ts  formatters.ts  theme.ts  types.ts  utils.ts
frontend/src/app/: layout.tsx
frontend/src/components/: ActionDialog.tsx  Asterisk.tsx  (+19 more)
programs/: Anchor.toml  package-lock.json  package.json  tsconfig.esm.json  tsconfig.json
programs/programs/structured-product/: Cargo.toml
programs/programs/structured-product/src/: lib.rs
programs/programs/transfer-snapshot-hook/: Cargo.toml
programs/programs/transfer-snapshot-hook/src/: lib.rs
programs/programs/treasury-wallet/: Cargo.toml
programs/programs/treasury-wallet/src/: lib.rs
programs/src/: index.ts  metadata.json  sdk.ts  utils.ts
programs/tests/: structured-product.ts  transfer-snapshot-hook.ts  treasury-wallet.ts  utils.ts
rpc-proxy/: index.js  package.json
tests/: transferhook.ts
(+74 files in other folders)
