[package]
name = "structured-product"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "structured_product"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.16.16"
spl-token-2022= { version = "1.0.0", features = ["no-entrypoint"] }
transfer-snapshot-hook = { path="../transfer-snapshot-hook", features = ["cpi"] }
treasury-wallet = { path="../treasury-wallet", features = ["cpi"] }

