[package]
name = "transfer-snapshot-hook"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_snapshot_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.16.16"
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
sha2-const = "0.1.2"

spl-transfer-hook-interface = { version = "0.4.1" }
spl-tlv-account-resolution = { version = "0.5.1" }
spl-pod = "0.1.0"
